Edited HUD, code optimisation, ediied core logic